{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 22,
  "lineage": "edd2b242-8c13-e4f8-0b5f-4a7c4940afde",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f9df170ff6d93af",
            "arn": "arn:aws:ec2:us-east-1:330857832776:elastic-ip/eipalloc-08f9df170ff6d93af",
            "association_id": "eipassoc-0e142cd0acc7892c3",
            "domain": "vpc",
            "id": "eipalloc-08f9df170ff6d93af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043056331acc1579f",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-52-204-83-110.compute-1.amazonaws.com",
            "public_ip": "52.204.83.110",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "eip-nat-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "eip-nat-music-app",
              "Project": "music-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "serveur_musique_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cb5cf49019e79c51",
            "arn": "arn:aws:ec2:us-east-1:330857832776:instance/i-0c3449dc44aeb2790",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3449dc44aeb2790",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "utc-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-001bc5586864344ac"
              }
            ],
            "primary_network_interface_id": "eni-001bc5586864344ac",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-44-204-186-108.compute-1.amazonaws.com",
            "public_ip": "44.204.186.108",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bed7a8100a915bd2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054382c271c277c76",
            "tags": {
              "Name": "serveur-musique-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "serveur-musique-app",
              "Project": "music-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b9d583ddbcd1df4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "i-0c3449dc44aeb2790",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_subnet_group.mysql_subnet_group",
            "aws_security_group.sg_mysql_rds",
            "aws_security_group.sg_serveur_musique_app",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "music_app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:internet-gateway/igw-0eb4d49d376809555",
            "id": "igw-0eb4d49d376809555",
            "owner_id": "330857832776",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "igw-music-app",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.music_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "music_app_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f9df170ff6d93af",
            "association_id": "eipassoc-0e142cd0acc7892c3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b2e27370ed059485",
            "network_interface_id": "eni-043056331acc1579f",
            "private_ip": "10.0.1.134",
            "public_ip": "52.204.83.110",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-054382c271c277c76",
            "tags": {
              "Name": "nat-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "nat-music-app",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.music_app_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:route-table/rtb-0c1b913542a2b794a",
            "id": "rtb-0c1b913542a2b794a",
            "owner_id": "330857832776",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2e27370ed059485",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-mysql",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "rt-private-mysql",
              "Project": "music-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "rtb-0c1b913542a2b794a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.music_app_igw",
            "aws_nat_gateway.music_app_nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:route-table/rtb-0ccf1bacdf8e02a65",
            "id": "rtb-0ccf1bacdf8e02a65",
            "owner_id": "330857832776",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb4d49d376809555",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "rt-public-music-app",
              "Project": "music-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "rtb-0ccf1bacdf8e02a65",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.music_app_igw",
            "aws_vpc.music_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dadc7e1162669ac1",
            "region": "us-east-1",
            "route_table_id": "rtb-0c1b913542a2b794a",
            "subnet_id": "subnet-091005c83cc429116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.music_app_igw",
            "aws_nat_gateway.music_app_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dafc3a9b7cb8c91",
            "region": "us-east-1",
            "route_table_id": "rtb-0c1b913542a2b794a",
            "subnet_id": "subnet-064a00232b9e10775"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.music_app_igw",
            "aws_nat_gateway.music_app_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a0ab0732f7530c6",
            "region": "us-east-1",
            "route_table_id": "rtb-0ccf1bacdf8e02a65",
            "subnet_id": "subnet-054382c271c277c76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.music_app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1b9c68d2c22795",
            "region": "us-east-1",
            "route_table_id": "rtb-0ccf1bacdf8e02a65",
            "subnet_id": "subnet-011df2bdc135d0f9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.music_app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mysql_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:security-group/sg-0985a4e4cc8e81874",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0985a4e4cc8e81874",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 app server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b9d583ddbcd1df4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sgrp-mysql-rds",
            "name_prefix": "",
            "owner_id": "330857832776",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-mysql-rds",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "sg-mysql-rds",
              "Project": "music-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "sg-0985a4e4cc8e81874",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_serveur_musique_app",
            "aws_vpc.music_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_serveur_musique_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:security-group/sg-01b9d583ddbcd1df4",
            "description": "Security group for EC2 serveur-musique-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b9d583ddbcd1df4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP app",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "93.131.163.245/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgrp-musique-app",
            "name_prefix": "",
            "owner_id": "330857832776",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgrp-musique-ap",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "sgrp-musique-ap",
              "Project": "music-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "sg-01b9d583ddbcd1df4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.music_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:subnet/subnet-091005c83cc429116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091005c83cc429116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330857832776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1-mysql",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "private-subnet-1-mysql",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "subnet-091005c83cc429116",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:subnet/subnet-064a00232b9e10775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a00232b9e10775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330857832776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-2-mysql",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "private-subnet-2-mysql",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "subnet-064a00232b9e10775",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:subnet/subnet-054382c271c277c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054382c271c277c76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330857832776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "public-subnet-1-music-app",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "subnet-054382c271c277c76",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:subnet/subnet-011df2bdc135d0f9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011df2bdc135d0f9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330857832776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-2-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "public-subnet-2-music-app",
              "Project": "music-app"
            },
            "vpc_id": "vpc-0d153db8afb915b2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "subnet-011df2bdc135d0f9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.music_app_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "music_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330857832776:vpc/vpc-0d153db8afb915b2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b708058fd8565be3",
            "default_route_table_id": "rtb-08360b285a9732e13",
            "default_security_group_id": "sg-079b1842c12fb8464",
            "dhcp_options_id": "dopt-0b36a3086d82600d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d153db8afb915b2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08360b285a9732e13",
            "owner_id": "330857832776",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-music-app",
              "Project": "music-app"
            },
            "tags_all": {
              "Name": "vpc-music-app",
              "Project": "music-app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "330857832776",
            "id": "vpc-0d153db8afb915b2f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}